gramatica_sintatica.txt
// ============================================================
// SYNTACTIC GRAMMAR
// Parser type: LL(1) Recursive Descent
// ============================================================
//
// CONVENTIONS:
//   <rule>      → non-terminal (defined below)
//   KEY_*       → terminal token from lexical spec
//   ID, INT...  → literal token from lexical spec
//   ε           → empty production (nothing)
//
// OPERATOR PRECEDENCE (lowest → highest):
//   OR  →  AND  →  NOT  →  Relational  →  Add/Sub  →  Mul/Div/Mod  →  Unary  →  Primary
// ============================================================


// ============================================================
// PROGRAM STRUCTURE
// ============================================================

<program>       ::= <item_list>
                  ;

<item_list>     ::= <item> <item_list>
                  |
                  ;

// An item is either a function definition, a variable/vector declaration,
// or a statement. Both declarations and function definitions start with a
// type keyword followed by an ID — they are disambiguated by what follows:
//   ID '(' ...  →  function definition
//   ID [...]    →  variable/vector declaration

<item>          ::= <type> ID <item_suffix>
                  | <statement>
                  ;

<item_suffix>   ::= KEY_LEFT_PARENTHESIS <param_list_opt> KEY_RIGHT_PARENTHESIS KEY_THEN <stmt_list> KEY_END
                  | <var_id_suffix> END_LINE
                  ;


// ============================================================
// TYPES
// ============================================================

<type>          ::= KEY_INT
                  | KEY_FLOAT
                  | KEY_CHAR
                  | KEY_STRING
                  | KEY_VOID
                  ;


// ============================================================
// VARIABLE AND VECTOR DECLARATIONS  (1.5 points)
// Supports multiple names:  int x, y, z;
// Supports vectors:         int arr[10];
// Supports mixed:           int x, arr[10], y;
//
// Examples:
//   int x;
//   float a, b, c;
//   char buf[256];
//   int x, arr[10], y;
// ============================================================

// After the first ID in a declaration, handle optional array suffix
// and any additional comma-separated identifiers
<var_id_suffix> ::= KEY_LEFT_BRACKET INT KEY_RIGHT_BRACKET <more_decl_ids>
                  | <more_decl_ids>
                  ;

<more_decl_ids> ::= SEPARATOR <decl_var> <more_decl_ids>
                  |
                  ;

<decl_var>      ::= ID KEY_LEFT_BRACKET INT KEY_RIGHT_BRACKET
                  | ID
                  ;


// ============================================================
// FUNCTION AND PROCEDURE DEFINITIONS  (1.5 points)
// Procedures use void as return type.
// Parameters support variables and arrays.
//
// Examples:
//   int add(int a, int b) then
//       return a + b;
//   end
//
//   void printArr(int arr[], int size) then
//       ...
//   end
// ============================================================

<param_list_opt> ::= <param_list>
                   |
                   ;

<param_list>    ::= <param> SEPARATOR <param_list>
                  | <param>
                  ;

<param>         ::= <type> ID KEY_LEFT_BRACKET KEY_RIGHT_BRACKET
                  | <type> ID
                  ;


// ============================================================
// STATEMENT LIST
// ============================================================

<stmt_list>     ::= <statement> <stmt_list>
                  |
                  ;

// Statements starting with a type keyword are local declarations.
// Statements starting with ID are assignments or function calls.
<statement>     ::= <type> ID <var_id_suffix> END_LINE
                  | <assign_or_call>
                  | <if_stmt>
                  | <while_stmt>
                  | <for_stmt>
                  | <dowhile_stmt>
                  | <read_stmt>
                  | <write_stmt>
                  | <return_stmt>
                  | <break_stmt>
                  | <continue_stmt>
                  ;


// ============================================================
// ASSIGNMENT AND FUNCTION CALL AS STATEMENT  (1.5 points)
// Disambiguated by the token after ID:
//   '='      →  simple assignment:    x = expr;
//   '['      →  vector assignment:    arr[i] = expr;
//   '('      →  function call stmt:   func(args);
//
// Examples:
//   x = 10 + y;
//   arr[i] = arr[i] + 1;
//   myFunc(a, b);
//   result = compute(x, y) + 1;
// ============================================================

<assign_or_call> ::= ID <assign_or_call_tail> END_LINE
                   ;

<assign_or_call_tail> ::= KEY_ASSIGN <expr>
                        | KEY_LEFT_BRACKET <expr> KEY_RIGHT_BRACKET KEY_ASSIGN <expr>
                        | KEY_LEFT_PARENTHESIS <arg_list_opt> KEY_RIGHT_PARENTHESIS
                        ;


// ============================================================
// CONDITIONAL — SIMPLE (no else)  (0.5 points)
// AND CONDITIONAL — COMPOUND (with else)  (1 point)
//
// Examples:
//   if (x > 0) then
//       x = x - 1;
//   end
//
//   if (x > 0) then
//       x = 1;
//   else
//       x = 0;
//   end
// ============================================================

<if_stmt>       ::= KEY_IF KEY_LEFT_PARENTHESIS <expr> KEY_RIGHT_PARENTHESIS KEY_THEN <stmt_list> <else_part> KEY_END
                  ;

<else_part>     ::= KEY_ELSE <stmt_list>
                  |
                  ;


// ============================================================
// WHILE LOOP — pre-tested  (part of 2 points)
//
// Example:
//   while (counter > 0) then
//       counter = counter - 1;
//   end
// ============================================================

<while_stmt>    ::= KEY_WHILE KEY_LEFT_PARENTHESIS <expr> KEY_RIGHT_PARENTHESIS KEY_THEN <stmt_list> KEY_END
                  ;


// ============================================================
// FOR LOOP — pre-tested with control variable  (part of 2 points)
// Syntax: for (init; condition; post) then ... end
//
// Example:
//   for (i = 0; i < 10; i = i + 1) then
//       write(i);
//   end
// ============================================================

<for_stmt>      ::= KEY_FOR KEY_LEFT_PARENTHESIS <for_init> END_LINE <expr> END_LINE <for_post> KEY_RIGHT_PARENTHESIS KEY_THEN <stmt_list> KEY_END
                  ;

<for_init>      ::= ID KEY_ASSIGN <expr>
                  |
                  ;

<for_post>      ::= ID KEY_ASSIGN <expr>
                  |
                  ;


// ============================================================
// DO-WHILE LOOP — post-tested  (part of 2 points)
// The body executes at least once before checking the condition.
//
// Example:
//   do
//       read(x);
//   while (x != 0);
// ============================================================

<dowhile_stmt>  ::= KEY_DO <stmt_list> KEY_WHILE KEY_LEFT_PARENTHESIS <expr> KEY_RIGHT_PARENTHESIS END_LINE
                  ;


// ============================================================
// INPUT  (0.5 points)
// Supports variables and vector elements.
//
// Examples:
//   read(x);
//   read(arr[i]);
// ============================================================

<read_stmt>     ::= KEY_READ KEY_LEFT_PARENTHESIS <read_arg> KEY_RIGHT_PARENTHESIS END_LINE
                  ;

<read_arg>      ::= ID KEY_LEFT_BRACKET <expr> KEY_RIGHT_BRACKET
                  | ID
                  ;


// ============================================================
// OUTPUT  (0.5 points)
// Supports variables, vectors, literals and expressions.
//
// Examples:
//   write(x);
//   write(arr[i]);
//   write("hello");
//   write(x + y, "result");
// ============================================================

<write_stmt>    ::= KEY_WRITE KEY_LEFT_PARENTHESIS <write_arg_list> KEY_RIGHT_PARENTHESIS END_LINE
                  ;

<write_arg_list> ::= <expr> SEPARATOR <write_arg_list>
                   | <expr>
                   ;


// ============================================================
// RETURN / BREAK / CONTINUE
// ============================================================

<return_stmt>   ::= KEY_RETURN <expr> END_LINE
                  | KEY_RETURN END_LINE
                  ;

<break_stmt>    ::= KEY_BREAK END_LINE
                  ;

<continue_stmt> ::= KEY_CONTINUE END_LINE
                  ;


// ============================================================
// FUNCTION/PROCEDURE CALL ARGUMENTS  (1.5 points)
// Supports variables, vector elements, literals and expressions.
//
// Examples:
//   func()
//   func(x)
//   func(arr[i], 10, "text")
// ============================================================

<arg_list_opt>  ::= <arg_list>
                  |
                  ;

<arg_list>      ::= <expr> SEPARATOR <arg_list>
                  | <expr>
                  ;


// ============================================================
// EXPRESSIONS  (unlimited size, with parentheses)
// Precedence handled by grammar levels (no left recursion).
// ============================================================

// Level 1 — Logical OR
<expr>          ::= <expr_and> <expr_or_tail>
                  ;

<expr_or_tail>  ::= KEY_OR <expr_and> <expr_or_tail>
                  |
                  ;

// Level 2 — Logical AND
<expr_and>      ::= <expr_not> <expr_and_tail>
                  ;

<expr_and_tail> ::= KEY_AND <expr_not> <expr_and_tail>
                  |
                  ;

// Level 3 — Logical NOT (unary, right-associative)
<expr_not>      ::= KEY_NOT <expr_not>
                  | <expr_rel>
                  ;

// Level 4 — Relational operators (non-associative)
<expr_rel>      ::= <expr_add> <rel_tail>
                  ;

<rel_tail>      ::= <relop> <expr_add>
                  |
                  ;

<relop>         ::= KEY_EQUAL
                  | KEY_NOT_EQUAL
                  | KEY_GREATER
                  | KEY_LESS
                  | KEY_GREATER_EQUAL
                  | KEY_LESS_EQUAL
                  ;

// Level 5 — Addition and Subtraction
<expr_add>      ::= <expr_mul> <expr_add_tail>
                  ;

<expr_add_tail> ::= KEY_PLUS <expr_mul> <expr_add_tail>
                  | KEY_MINUS <expr_mul> <expr_add_tail>
                  |
                  ;

// Level 6 — Multiplication, Division, Modulo
<expr_mul>      ::= <expr_unary> <expr_mul_tail>
                  ;

<expr_mul_tail> ::= KEY_MULTIPLY <expr_unary> <expr_mul_tail>
                  | KEY_DIVIDE <expr_unary> <expr_mul_tail>
                  | KEY_MOD <expr_unary> <expr_mul_tail>
                  |
                  ;

// Level 7 — Unary operators (right-associative)
<expr_unary>    ::= KEY_MINUS <expr_unary>
                  | KEY_BIT_NOT <expr_unary>
                  | <expr_primary>
                  ;

// Level 8 — Primary: literals, identifiers, array access,
//           function calls, and parenthesized expressions
// After seeing ID, disambiguate by next token:
//   '('  → function call (supports variables, vectors, literals)
//   '['  → vector element access
//   else → plain variable
<expr_primary>  ::= KEY_LEFT_PARENTHESIS <expr> KEY_RIGHT_PARENTHESIS
                  | ID <id_expr_tail>
                  | INT
                  | REAL
                  | BINARY
                  | HEX
                  | CHAR_LIT
                  | STRING_LIT
                  ;

<id_expr_tail>  ::= KEY_LEFT_PARENTHESIS <arg_list_opt> KEY_RIGHT_PARENTHESIS
                  | KEY_LEFT_BRACKET <expr> KEY_RIGHT_BRACKET
                  |
                  ;


// ============================================================
// SIMULATION — valid programs in this language
// ============================================================

// --- Variable and vector declarations ---
int x;
float a, b, c;
char buf[256];
int i, arr[10], total;
string name;
void;

// --- Simple if (no else) ---
if (x > 0) then
    x = x - 1;
end

// --- Compound if-else ---
if (x >= 10) then
    write("big");
else
    write("small");
end

// --- While loop ---
while (i < 10) then
    i = i + 1;
end

// --- For loop ---
for (i = 0; i < 10; i = i + 1) then
    write(i);
end

// --- Do-while loop ---
do
    read(x);
while (x != 0);

// --- Read and Write ---
read(x);
read(arr[i]);
write(x);
write(arr[i]);
write("hello world");
write(x + y, "result");

// --- Assignment with expressions ---
x = 10 + y * 2;
arr[i] = arr[i - 1] + 1;
total = add(a, b) + 1;

// --- Break and continue ---
while (x > 0) then
    if (x == 5) then
        break;
    end
    if (x == 3) then
        continue;
    end
    x = x - 1;
end

// --- Function definition and call ---
int add(int a, int b) then
    return a + b;
end

void printArr(int arr[], int size) then
    for (i = 0; i < size; i = i + 1) then
        write(arr[i]);
    end
end

int result = add(3, 4);
printArr(arr, 10);

// --- Complex expressions ---
x = (a + b) * (c - d) / 2;
x = a > b && c <= d || !flag;
x = ~mask & 0xFF | val << 2;
